rearranged personal skills and updated technical skills

--- a/src/body_en.tex
+++ b/src/body_en.tex
@@ -107,10 +107,10 @@
 %%%
 \cvlistitem{Team Leading and Coordination}
 \cvlistitem{Project Management}
-\cvlistitem{IT Security Administration}
+\cvlistitem{Secure DevOps (DevSecOps)}
 \cvlistitem{IT Security Architecture Design (data protection, security operation center, identity \& access management, electronic signature, certification authority)}
+\cvlistitem{IT Security Administration}
 \cvlistitem{Development and scripting (knowledge and application of procedural, object-oriented, functional, and logical programming paradigms)}
-\cvlistitem{Secure DevOps}
 \cvlistitem{Strong communication skills}
 \cvlistitem{Excellent logical-mathematical analysis skills}
 \cvlistitem{Excellent problem-solving skills}
@@ -120,6 +120,9 @@
 %%%
 \section{Technical Skills}
 %%%
+\cvlistitem{SAST (Opentext Fortify ScanCentral, Snyk)}
+\cvlistitem{DAST (Opentext Fortify WebInspect)}
+\cvlistitem{SCA (Sonatype IQ Server, Sinopsys BlackDuck)}
 \cvlistitem{Intrusion Prevention/Detection (Fortinet, Forcepoint NGFW, McAfee NSM)}
 \cvlistitem{AAA (OSC Radiator, Cisco ACS)}
 \cvlistitem{DDOS Protection (Arbor Sightline, Arbor Insight)}
