--- a/src/body_it.tex
+++ b/src/body_it.tex
@@ -105,10 +105,10 @@
 %%%
 \cvlistitem{Team Leading and Coordination}
 \cvlistitem{Project Management}
-\cvlistitem{IT Security Administration}
+\cvlistitem{Secure DevOps (DevSecOps)}
 \cvlistitem{IT Security Architecture Design (data protection, security operation center, identity \& access management, electronic signature, certification authority)}
+\cvlistitem{IT Security Administration}
 \cvlistitem{Sviluppo e scripting (conoscenza e applicazione dei paradigmi di programmazione procedurale, orientata agli oggetti, funzionale e logica)}
-\cvlistitem{Secure DevOps}
 \cvlistitem{Spiccate capacità comunicative}
 \cvlistitem{Ottima capacità di analisi logico matematica}
 \cvlistitem{Ottima capacità di individuazione e risoluzione problemi}
@@ -118,6 +118,9 @@
 %%%
 \section{Competenze tecniche}
 %%%
+\cvlistitem{SAST (Opentext Fortify ScanCentral, Snyk)}
+\cvlistitem{DAST (Opentext Fortify WebInspect)}
+\cvlistitem{SCA (Sonatype IQ Server, Sinopsys BlackDuck)}
 \cvlistitem{Intrusion Prevention/Detection (Fortinet, Forcepoint NGFW, McAfee NSM)}
 \cvlistitem{AAA (OSC Radiator, Cisco ACS)}
 \cvlistitem{DDOS Protection (Arbor Sightline, Arbor Insight)}
